Ejemplo de estilos CSS

--- a/style/style.css
+++ b/style/style.css
@@ -46,6 +46,12 @@ body .ejhg .dummy{
     height: 90%;
     background-color: blueviolet;
 }
+
+body .ejhg .dummy p{
+    font-size: 2rem;
+    color: coral;
+}
+
 .ejhg > p{
     background-color: aquamarine;
     border: solid black 5px;
